--- a/PortalDoFranqueadoGUI/View/ManagerCampaigns.xaml
+++ b/PortalDoFranqueadoGUI/View/ManagerCampaigns.xaml
@@ -1,13 +1,14 @@
-﻿<UserControl x:Class="PortalDoFranqueadoGUI.View.ManagerCollections"
+﻿<UserControl x:Class="PortalDoFranqueadoGUI.View.ManagerCampaigns"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:viewmodel="clr-namespace:PortalDoFranqueadoGUI.ViewModel"
+             xmlns:model="clr-namespace:PortalDoFranqueadoGUI.Model"
              xmlns:util="clr-namespace:PortalDoFranqueadoGUI.Util"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             d:DataContext="{d:DesignInstance Type=viewmodel:ManagerCollectionsViewModel}"
              xmlns:local="clr-namespace:PortalDoFranqueadoGUI.View"
+             d:DataContext="{d:DesignInstance Type=viewmodel:ManagerCampaignsViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Background="White"
@@ -20,72 +21,35 @@
         </i:Interaction.Triggers>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
-               Content="GERENCIAR PERÍODOS DE COMPRAS"
-               FontWeight="Bold"/>
-        <Grid Grid.Row="1" Grid.Column="0"
-              Margin="0,0,5,5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="5"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="5"/>
-            </Grid.ColumnDefinitions>
-            <Border Grid.Column="0" Grid.ColumnSpan="6"
-                    Grid.Row="0" Grid.RowSpan="2"
-                    Style="{StaticResource DefaultBlackBorder}"
-                    Width="124"/>
-            <CheckBox Grid.Row="0" Grid.Column="1"
-                  IsChecked="{Binding ShowClosed}"
-                      Width="104"
-                      Foreground="White"
-                      Margin="5"
-                      VerticalAlignment="Center">
-                <TextBlock Text="Exibir períodos encerrados"
-                           TextWrapping="Wrap"/>
-            </CheckBox>
-        </Grid>
-        <Grid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"
+        <Grid Grid.Row="0"
               Margin="0,0,5,5">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="5"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="5"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Border Grid.Column="0" Grid.ColumnSpan="6"
-                       Grid.Row="0" Grid.RowSpan="2"
+            <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
+               Content="GERENCIAR CAMPANHAS"
+               FontWeight="Bold"/>
+            <Border Grid.Column="0" Grid.ColumnSpan="5"
+                       Grid.Row="1" Grid.RowSpan="2"
                        Style="{StaticResource DefaultBlackBorder}"
-                    Width="649"/>
-            <Label Grid.Row="0" Grid.Column="1" Content="Início" Style="{StaticResource LabelTituloCampo}"/>
-            <Label Grid.Row="0" Grid.Column="2" Content="Fim" Style="{StaticResource LabelTituloCampo}"/>
-            <Label Grid.Row="0" Grid.Column="3" Content="Identificação da pasta" Style="{StaticResource LabelTituloCampo}"/>
-            <DatePicker Grid.Row="1" Grid.Column="1" 
-                        SelectedDate="{Binding CollectionToAdd.StartDate.Value}"
-                        util:FocusExtension.IsFocused="{Binding CollectionToAdd.StartDate.IsFocused}"
-                        Margin="5"
-                        BorderThickness="0"/>
-            <DatePicker Grid.Row="1" Grid.Column="2" 
-                        SelectedDate="{Binding CollectionToAdd.EndDate.Value}"
-                        util:FocusExtension.IsFocused="{Binding CollectionToAdd.EndDate.IsFocused}"
-                        Margin="5"
-                        BorderThickness="0"/>
-            <TextBox Grid.Row="1" Grid.Column="3" 
-                     Text="{Binding CollectionToAdd.FolderId.Value}"
-                     util:FocusExtension.IsFocused="{Binding CollectionToAdd.FolderId.IsFocused}"
+                    Width="593"/>
+            <Label Grid.Row="1" Grid.Column="1" Content="Título" Style="{StaticResource LabelTituloCampo}"/>
+            <Label Grid.Row="1" Grid.Column="2" Content="Identificação da pasta" Style="{StaticResource LabelTituloCampo}"/>
+            <TextBox Grid.Row="2" Grid.Column="1" 
+                     Text="{Binding CampaignToAdd.Title.Value}"
+                     util:FocusExtension.IsFocused="{Binding CampaignToAdd.Title.IsFocused}"
                      MaxLength="33"
                      Margin="5"
                      Width="237"
@@ -93,31 +57,41 @@
                      Foreground="White"
                      BorderBrush="White"
                      Height="22"/>
-            <Button Grid.Row="1" Grid.Column="4" 
+            <TextBox Grid.Row="2" Grid.Column="2" 
+                     Text="{Binding CampaignToAdd.FolderId.Value}"
+                     util:FocusExtension.IsFocused="{Binding CampaignToAdd.FolderId.IsFocused}"
+                     MaxLength="33"
+                     Margin="5"
+                     Width="237"
+                     Background="Black"
+                     Foreground="White"
+                     BorderBrush="White"
+                     Height="22"/>
+            <Button Grid.Row="2" Grid.Column="3" 
                     Content="ADICIONAR" 
                     Style="{StaticResource DefaultButton}"
-                    Command="{Binding AddCollectionCommand}"/>
+                    Command="{Binding AddCampaignCommand}"/>
         </Grid>
         <ListView Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
-                  ItemsSource="{Binding FilteredCollection}"
+                  ItemsSource="{Binding Campaigns}"
                   SelectionMode="Single"
-                  Width="809"
+                  Width="812"
                   HorizontalAlignment="Left"
                   IsEnabled="{Binding EnabledContent}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Início" Width="80">
+                    <GridViewColumn Header="Título" Width="200">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Collection.StartDate, StringFormat='dd/MM/yyyy'}"
+                                <TextBlock Text="{Binding Campaign.Title}"
                                             Style="{StaticResource TextBlockCell}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="Fim" Width="80">
+                    <GridViewColumn Header="Pasta" Width="200">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Collection.EndDate, StringFormat='dd/MM/yyyy'}"
+                                <TextBlock Text="{Binding Campaign.FolderId}"
                                             Style="{StaticResource TextBlockCell}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
@@ -125,7 +99,7 @@
                     <GridViewColumn Header="Situação" Width="80">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Collection.Status, Converter={StaticResource EnumConverter}}"
+                                <TextBlock Text="{Binding Campaign.Status, Converter={StaticResource EnumConverter}}"
                                             Style="{StaticResource TextBlockCell}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
@@ -134,28 +108,20 @@
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
-                                    <Button Content="{Binding CurrentStatusAction}"
-                                            Style="{StaticResource CellButton}"
-                                            Command="{Binding CurrentStatusCommand}"
-                                            CommandParameter="{Binding Collection}"/>
                                     <Button Content="{Binding NextStatusAction}"
                                             IsEnabled="{Binding EnabledNextStatus}"
                                             Style="{StaticResource CellButton}"
                                             Command="{Binding NextStatusCommand}"
-                                            CommandParameter="{Binding Collection}"/>
+                                            CommandParameter="{Binding}"/>
                                     <Button Content="{Binding PreviusStatusAction}"
                                             IsEnabled="{Binding EnabledPreviusStatus}"
                                             Style="{StaticResource CellButton}"
                                             Command="{Binding PreviusStatusCommand}"
-                                            CommandParameter="{Binding Collection}"/>
-                                    <Button Content="Pedidos"
-                                            Style="{StaticResource CellButton}"
-                                            Command="{Binding ViewPurchasesCommand}"
-                                            CommandParameter="{Binding Collection}"/>
+                                            CommandParameter="{Binding}"/>
                                     <Button Content="Excluir"
                                             Style="{StaticResource CellButton}"
                                             Command="{Binding DeleteCommand}"
-                                            CommandParameter="{Binding Collection}"
+                                            CommandParameter="{Binding}"
                                             Background="#FF0009"/>
                                 </StackPanel>
                             </DataTemplate>
