--- a/PortalDoFranqueadoGUI/View/MainManager.xaml
+++ b/PortalDoFranqueadoGUI/View/MainManager.xaml
@@ -5,12 +5,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:viewmodel="clr-namespace:PortalDoFranqueadoGUI.ViewModel"
              xmlns:util="clr-namespace:PortalDoFranqueadoGUI.Util"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              d:DataContext="{d:DesignInstance Type=viewmodel:MainManagerViewModel}"
              mc:Ignorable="d" 
              Background="White"
              Cursor="{Binding CurrentCursor}"
              Loaded="UserControl_Loaded">
     <Grid>
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="Loaded">
+                <i:InvokeCommandAction Command="{Binding LoadedCommand}"/>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
